--- a/devcontainer.json
+++ b/devcontainer.json
@@ -2,8 +2,8 @@
   "name": "ga2-256abb",
   "image": "ghcr.io/devcontainers/features/python:1",
   "extensions": [
-    "astral-sh.uv",
     "ms-python.python"
   ],
-  "postCreateCommand": "pip install fastapi uvicorn"
+  "postCreateCommand": "pip install --upgrade pip && pip install fastapi uvicorn"
 }
+
