--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,17 +1,23 @@
 {
   "name": "ga2-256abb",
+  // Use a base image. The Universal Image is a good default.
   "image": "mcr.microsoft.com/devcontainers/universal:2",
+
   "features": {
+    // Install Python using the devcontainer feature.
     "ghcr.io/devcontainers/features/python:1": {}
   },
+
   "customizations": {
     "vscode": {
+      // Install required VS Code extensions.
       "extensions": [
-        "ms-python.python",
-        "astral-sh.uv"
+        "astral-sh.uv",
+        "ms-python.python"
       ]
     }
   },
-  "postCreateCommand": "pip install fastapi"
-}
 
+  // A command to run after the container is created.
+  "postCreateCommand": "uv pip install fastapi"
+}
